<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAlarmDateActivity"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:background="@color/colorWhite">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\n"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/date_name"
                android:textColor="@color/colorBlack"/>
            <EditText
                android:id="@+id/add_name"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/input_limit"
                android:textAlignment="center"
                android:textColorHint="@color/transparent"
                android:backgroundTint="@color/colorBlack"
                android:textColor="@color/colorBlack"
                android:gravity="center_horizontal" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/add_year"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="0000"
                android:backgroundTint="@color/colorBlack"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:paddingRight="5dp"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/add_month"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="00"
                android:backgroundTint="@color/colorBlack"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:paddingRight="5dp"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:id="@+id/add_day"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="00"
                android:backgroundTint="@color/colorBlack"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                style="?android:borderlessButtonStyle"
                android:drawableLeft="@drawable/ic_baseline_check_24"
                android:id="@+id/add_insert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:drawableTint="@color/colorBlack"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>