<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_alignBaseline="@+id/main_add"
            android:id="@+id/main_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2020.12.08"
            android:layout_marginLeft="@dimen/browser_actions_context_menu_min_padding"
            android:textSize="18sp"/>

        <Button
            android:layout_alignParentRight="true"
            android:drawableLeft="@drawable/ic_baseline_add_24"
            style="?android:borderlessButtonStyle"
            android:id="@+id/main_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:backgroundTint="#000000"
            android:text="@string/add"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:layout_above="@+id/layout_ads"
            android:id="@+id/main_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/layout_ads"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/adView"
                android:text="@string/ad" />

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id_for_test">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>


    </RelativeLayout>



</LinearLayout>